Fix crash when users don't have proper permissions

When users don't have permissions to view both system and user logs,
priv->boot_match equals NULL. One common scenario is the journal storage
type is volatile and there is no journal files under /var/log/journal.
So don't add boot match under this scenario.

https://bugzilla.gnome.org/show_bug.cgi?id=776818